# optimum-amd-utils

./: README.md  pyproject.toml
conda/: oamd_hf_main_pt2.1.2_minimal.yml  oamd_hf_pt2.1.2_minimal.yml  oamd_hf_pt2.2.1_minimal.yml
src/optimum_amd_utils/: __init__.py
test/brevitas/: conftest.py  test_main.py  test_ppl_main_acc.py  test_ppl_main_acc_gpus.py  test_ppl_main_acc_offload.py  test_ppl_main_cpu.py  test_ppl_main_gpu.py  test_run_main.py  test_run_main_acc.py  test_run_main_acc_gpus.py  test_run_main_acc_offload.py  test_run_main_cpu.py  test_run_main_gpu.py  utils.py
